--- a/wz95_geolocator/web/index.html
+++ b/wz95_geolocator/web/index.html
@@ -38,6 +38,7 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCj9Ceq2s9JAlIEfJ7fv2ZzqOQ83VoFLa4"></script>
 </head>
 <body>
   <script>
